* Fixed invisible select tag text

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,10 @@
   font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+select {
+  color: black;
+}
+
 a#title {
   @include animated_underline;
   font-size: 300%;
